# shapestrings

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  bump_version.py  package.xml  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
Documentation/: API.md  README.md
Documentation/Commands/: Radial.md  Spaced.md
Resources/Documents/: Overview.md
freecad/ShapeStrings/: __init__.py  init_gui.py
freecad/ShapeStrings/API/: Module.py  __init__.py
freecad/ShapeStrings/Commands/: Radial.py  Spaced.py
freecad/ShapeStrings/Dialogs/: Radial.py  Spaced.py  __init__.py
freecad/ShapeStrings/Generators/: Radial.py  Spaced.py
freecad/ShapeStrings/Misc/: Resources.py  Toolbar.py  Version.py
freecad/ShapeStrings/Objects/: __init__.py
freecad/ShapeStrings/Radial/: Command.py  Dialog.py  Generator.py  Object.py  View.py  __init__.py
freecad/ShapeStrings/Resources/Interfaces/: Radial.ui  Spaced.ui
freecad/ShapeStrings/Spaced/: Command.py  Dialog.py  Generator.py  Object.py  View.py  __init__.py
freecad/ShapeStrings/Views/: Radial.py  Spaced.py  __init__.py
freecad/advanced_shapestrings/: AdvancedShapestring.py  AdvancedShapestringTools.py  gui_radialshapestring.py  gui_spaced_shapestrings.py  gui_spacedshapestring.py  init_gui.py  make.py  make_radialshapestring.py  make_spacedshapestring.py  paths.py  radial_shapestring.py  spaced_shapestring.py  task_radialshapestring.py  task_spacedshapestring.py  version.py  view_radialshapestring.py  view_spacedshapestring.py
freecad/advanced_shapestrings/Commands/: Radial.py  Spaced.py  __init__.py
freecad/advanced_shapestrings/Dialogs/: Radial.py  Spaced.py
freecad/advanced_shapestrings/Generators/: Radial.py  Spaced.py  __init__.py
freecad/advanced_shapestrings/Misc/: Justify.py  Resources.py  Toolbar.py
freecad/advanced_shapestrings/Objects/: Radial.py  Spaced.py
freecad/advanced_shapestrings/Views/: Radial.py  Spaced.py
(+7 files in other folders)
